--- a/public/map.html
+++ b/public/map.html
@@ -1,76 +1,103 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Listen - AI 배송경로 (실주소 완성형)</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>The Listen - AI 배송경로 (네비 연동 포함 최종)</title>
+  <!-- 카카오 지도 SDK (서비스 라이브러리 포함) -->
   <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=301ef23f56e23f0dee3eaf47fe734b03&libraries=services"></script>
   <style>
-    body { margin:0; font-family:"Noto Sans KR",sans-serif; background:#f7f9fc; }
-    header { background:#007bff; color:white; text-align:center; padding:12px; font-weight:600; font-size:1.2rem; }
+    body { margin:0; font-family:"Noto Sans KR",sans-serif; background:#f5f7fa; }
+    header { background:#007bff; color:#fff; text-align:center; padding:12px; font-weight:600; font-size:1.1rem; }
     #map { width:100%; height:90vh; }
-    #customerCard {
-      position:fixed; bottom:0; left:0; width:100%;
-      background:white; border-top-left-radius:16px; border-top-right-radius:16px;
-      box-shadow:0 -3px 10px rgba(0,0,0,0.25);
-      transform:translateY(100%); transition:transform .4s ease;
-      max-height:55vh; overflow-y:auto; z-index:1000;
+
+    /* 하단 고객 카드 */
+    #customerCard{
+      position:fixed; left:0; bottom:0; width:100%;
+      background:#fff; border-top-left-radius:16px; border-top-right-radius:16px;
+      box-shadow:0 -6px 20px rgba(0,0,0,.25);
+      transform:translateY(100%); transition:transform .35s ease;
+      max-height:60vh; overflow-y:auto; z-index:9999;
     }
-    #customerCard.active { transform:translateY(0); }
-    .card-header { text-align:center; font-weight:700; padding:10px; color:#333; }
-    .delivery-item { padding:12px 18px; border-bottom:1px solid #eee; }
-    .delivery-item button {
-      background:#007bff; color:white; border:none; border-radius:8px;
-      padding:8px 12px; cursor:pointer; margin-top:6px;
+    #customerCard.active{ transform:translateY(0); }
+    .card-header{ padding:12px 16px; font-weight:700; text-align:center; }
+    .delivery-item{ padding:12px 18px; border-top:1px solid #f0f0f0; font-size:.95rem; }
+    .delivery-item p{ margin:4px 0; }
+    .btn-row{ display:flex; gap:8px; margin-top:10px; justify-content:center; flex-wrap:wrap; }
+    .btn{
+      border:none; border-radius:10px; padding:10px 14px; cursor:pointer; font-weight:600;
+      background:#007bff; color:#fff;
     }
-    .my-location-dot {
-      width:12px; height:12px; background:rgba(0,123,255,.9);
-      border-radius:50%; border:2px solid white;
+    .btn.gray{ background:#6c757d; }
+    .btn.green{ background:#22c55e; }
+    .tag{ display:inline-block; padding:2px 8px; border-radius:999px; background:#eef4ff; color:#3563ff; font-size:.8rem; margin-left:6px; }
+
+    /* 내 위치 파란 점 */
+    .my-location-dot{
+      width:12px; height:12px; background:rgba(0,123,255,.95);
+      border-radius:50%; border:2px solid #fff;
     }
   </style>
 </head>
 <body>
-  <header>🚚 The Listen AI 배송경로 (200건 실제주소 완성형)</header>
+  <header>🚚 The Listen · AI 경로 · 200건 · 카카오네비 연동</header>
   <div id="map"></div>
 
+  <!-- 고객 카드 -->
   <div id="customerCard">
     <div class="card-header">고객 상세 정보</div>
     <div id="card-content"></div>
   </div>
 
   <script>
+    /* =========================
+       0) 공통/전역
+    ==========================*/
     const map = new kakao.maps.Map(document.getElementById("map"), {
       center: new kakao.maps.LatLng(37.4979, 127.0276),
       level: 5
     });
-
     const geocoder = new kakao.maps.services.Geocoder();
-    let myPosition = null;
-    const markerObjects = {};
 
-    // ✅ 내 위치 표시
+    let myPosition = null;           // 현재 위치 kakao.maps.LatLng
+    const markerById = {};           // { [waybillId]: CustomOverlay }
+    let resolvedList = [];           // 지오코딩 완료된 배송지 배열
+    let markersDrawn = false;        // 중복 드로잉 방지
+
+    /* =========================
+       1) 내 위치 (실시간)
+    ==========================*/
     if (navigator.geolocation) {
       navigator.geolocation.watchPosition(
         (pos) => {
           const lat = pos.coords.latitude;
           const lng = pos.coords.longitude;
           myPosition = new kakao.maps.LatLng(lat, lng);
+
           if (!window.myCircle) {
             window.myCircle = new kakao.maps.CustomOverlay({
               position: myPosition,
               content: '<div class="my-location-dot"></div>',
-              map: map,
+              map
             });
           } else {
             window.myCircle.setPosition(myPosition);
           }
+
+          // 첫 GPS 확보 후 한 번만 마커 정렬 갱신
+          if (resolvedList.length > 0 && !markersDrawn) {
+            drawMarkersSorted();
+          }
         },
-        (err) => console.warn("GPS 비활성화됨", err),
+        (err) => console.warn("GPS 비활성화 또는 권한 거부:", err),
         { enableHighAccuracy: true }
       );
     }
 
-    // ✅ 실제 존재하는 서울 주소 200개 (무작위 예시)
+    /* =========================
+       2) 실제 '유효' 서울 주소 10개 × 20회 = 200건
+          (맵-주소 100% 일치, 테스트용)
+    ==========================*/
     const baseAddrs = [
       "서울특별시 강남구 테헤란로 231",
       "서울특별시 송파구 올림픽로 300",
@@ -83,100 +110,146 @@
       "서울특별시 종로구 종로 33",
       "서울특별시 중구 세종대로 110"
     ];
+
     const deliveries = Array.from({ length: 200 }).map((_, i) => ({
-      id: `DLV${String(i + 1).padStart(3, "0")}`,
-      name: `고객${i + 1}`,
-      phone: `010-${(1000 + i).toString().slice(-4)}-${(2000 + i).toString().slice(-4)}`,
+      id: `DLV${String(i+1).padStart(3,"0")}`,     // 운송장
+      name: `고객${i+1}`,
+      phone: `010-${(1000+i).toString().slice(-4)}-${(2000+i).toString().slice(-4)}`,
       address: baseAddrs[i % baseAddrs.length],
-      boxes: Math.floor(Math.random() * 3) + 1
+      boxes: (i % 3) + 1, // 1~3
+      lat: null,
+      lng: null
     }));
 
-    // ✅ 거리 계산 (Haversine)
-    function calcDistance(lat1, lng1, lat2, lng2) {
-      const R = 6371;
-      const dLat = (lat2 - lat1) * Math.PI / 180;
-      const dLng = (lng2 - lng1) * Math.PI / 180;
-      const a =
-        Math.sin(dLat / 2) ** 2 +
-        Math.cos(lat1 * Math.PI / 180) * Math.cos(lat2 * Math.PI / 180) *
-        Math.sin(dLng / 2) ** 2;
-      return R * 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+    /* =========================
+       3) 거리(Haversine)
+    ==========================*/
+    function distKm(lat1,lng1,lat2,lng2){
+      const R=6371;
+      const dLat=(lat2-lat1)*Math.PI/180;
+      const dLng=(lng2-lng1)*Math.PI/180;
+      const a=Math.sin(dLat/2)**2 + Math.cos(lat1*Math.PI/180)*Math.cos(lat2*Math.PI/180)*Math.sin(dLng/2)**2;
+      return R*2*Math.atan2(Math.sqrt(a),Math.sqrt(1-a));
     }
 
-    // ✅ 좌표 변환 및 마커 생성
-    function drawMarkers() {
-      deliveries.forEach((d, i) => {
-        geocoder.addressSearch(d.address, (result, status) => {
-          if (status === kakao.maps.services.Status.OK) {
-            d.lat = Number(result[0].y);
-            d.lng = Number(result[0].x);
-            placeMarker(d, i + 1);
-          }
-        });
+    /* =========================
+       4) 주소→좌표(비동기) → 모두 끝나면 정렬/드로우
+    ==========================*/
+    let geocodeDone = 0;
+    deliveries.forEach(d => {
+      geocoder.addressSearch(d.address, (res, status) => {
+        geocodeDone++;
+        if (status === kakao.maps.services.Status.OK && res && res[0]) {
+          d.lat = Number(res[0].y);
+          d.lng = Number(res[0].x);
+          resolvedList.push(d);
+        }
+        // 전부 처리되면 그때 정렬 및 마커 표시
+        if (geocodeDone === deliveries.length) {
+          drawMarkersSorted();
+        }
       });
+    });
+
+    /* =========================
+       5) GPS 기준 정렬 → 순번 마커 생성
+    ==========================*/
+    function drawMarkersSorted(){
+      if (markersDrawn) return;
+      if (resolvedList.length === 0) return;
+
+      const list = [...resolvedList];
+      // GPS 없으면 원본 순서, 있으면 거리 정렬
+      if (myPosition) {
+        const myLat = myPosition.getLat();
+        const myLng = myPosition.getLng();
+        list.sort((a,b) => distKm(myLat,myLng,a.lat,a.lng) - distKm(myLat,myLng,b.lat,b.lng));
+      }
+
+      list.forEach((d, idx) => placeMarker(d, idx+1));
+      markersDrawn = true;
     }
 
-    // ✅ 마커 표시 + 클릭 이벤트
-    function placeMarker(d, order) {
-      const markerEl = document.createElement("div");
-      markerEl.style.cssText = `
-        background:#007bff;color:white;border-radius:50%;
-        width:30px;height:30px;display:flex;align-items:center;
-        justify-content:center;font-weight:600;font-size:13px;
-        border:2px solid white;box-shadow:0 2px 5px rgba(0,0,0,0.3);
+    function placeMarker(d, order){
+      const el = document.createElement("div");
+      el.style.cssText = `
+        background:#007bff; color:#fff; border-radius:50%;
+        width:30px; height:30px; display:flex; align-items:center; justify-content:center;
+        font-weight:700; font-size:13px; border:2px solid #fff; box-shadow:0 2px 6px rgba(0,0,0,.3);
         cursor:pointer;
       `;
-      markerEl.textContent = order;
+      el.textContent = order;
 
-      const marker = new kakao.maps.CustomOverlay({
+      const overlay = new kakao.maps.CustomOverlay({
         position: new kakao.maps.LatLng(d.lat, d.lng),
-        content: markerEl,
-        map: map
+        content: el,
+        map
       });
+      markerById[d.id] = overlay;
 
-      markerObjects[d.id] = marker;
-
-      markerEl.addEventListener("click", () => {
-        showCustomerCard(d, order);
-      });
+      // 🔵 마커 클릭 → 고객카드 열기
+      el.addEventListener("click", () => openCustomerCard(d, order));
     }
 
-    // ✅ 고객카드 표시
-    function showCustomerCard(d, order) {
+    /* =========================
+       6) 고객 카드 (활성화, 닫기)
+    ==========================*/
+    function openCustomerCard(d, order){
       const card = document.getElementById("customerCard");
-      const content = document.getElementById("card-content");
-      content.innerHTML = `
-        <div style="text-align:center;">
-          <h3>${order}️⃣ 순번</h3>
-          <p><b>이름:</b> ${d.name}</p>
-          <p><b>전화번호:</b> ${d.phone}</p>
-          <p><b>상세주소:</b> ${d.address}</p>
-          <p><b>운송장번호:</b> ${d.id}</p>
-          <p><b>박스수량:</b> ${d.boxes}개</p>
-          <button onclick="capturePhoto('${d.id}','${d.address}')">📸 사진촬영 및 전송</button>
+      const box = document.getElementById("card-content");
+      box.innerHTML = `
+        <div class="delivery-item" style="text-align:center;">
+          <div style="font-size:1.05rem; font-weight:700;">${order}️⃣ 순번 <span class="tag">박스 ${d.boxes}개</span></div>
+          <p><b>고객명</b> : ${d.name}</p>
+          <p><b>전화번호</b> : ${d.phone}</p>
+          <p><b>상세주소</b> : ${d.address}</p>
+          <p><b>운송장번호</b> : ${d.id}</p>
+          <div class="btn-row">
+            <button class="btn green" onclick="startKakaoNavi(${d.lat},${d.lng}, '${encodeURIComponent(d.address)}')">🚘 카카오네비 시작</button>
+            <button class="btn" onclick="capturePhoto('${d.id}','${d.address}')">📸 사진 촬영·전송</button>
+            <button class="btn gray" onclick="closeCard()">닫기</button>
+          </div>
         </div>
       `;
       card.classList.add("active");
     }
+    function closeCard(){ document.getElementById("customerCard").classList.remove("active"); }
 
-    // ✅ 사진촬영 → 투명화 처리
-    function capturePhoto(id, address) {
+    /* =========================
+       7) 사진 촬영/전송 → 마커 반투명 처리
+    ==========================*/
+    function capturePhoto(id, address){
       const input = document.createElement("input");
       input.type = "file";
       input.accept = "image/*";
-      input.capture = "environment";
+      input.capture = "environment"; // 후면카메라 우선
       input.onchange = (e) => {
-        if (e.target.files[0]) {
-          alert(`📸 ${address}\n운송장 ${id} 사진 전송 완료!`);
-          const marker = markerObjects[id];
-          if (marker) marker.getContent().style.opacity = "0.4";
-          document.getElementById("customerCard").classList.remove("active");
-        }
+        const file = e.target.files && e.target.files[0];
+        if (!file) return;
+        alert(`📸 사진 전송 완료\n· 주소: ${address}\n· 운송장: ${id}`);
+        const mk = markerById[id];
+        if (mk) { mk.getContent().style.opacity = "0.4"; } // 완료 표시
+        closeCard();
       };
       input.click();
     }
 
-    drawMarkers();
+    /* =========================
+       8) 카카오네비/지도 길안내 연동 (모바일)
+          - 카카오맵 앱이 있으면 앱으로,
+            없으면 웹지도 길찾기 열리도록 링크 사용
+    ==========================*/
+    function startKakaoNavi(lat, lng, encodedName){
+      // 1) 카카오맵 길찾기 링크 (앱/웹 자동 연결)
+      //    https://map.kakao.com/link/to/장소명,위도,경도
+      const url = `https://map.kakao.com/link/to/${encodedName},${lat},${lng}`;
+      window.location.href = url;
+    }
+
+    // 전역 바인딩
+    window.capturePhoto = capturePhoto;
+    window.closeCard = closeCard;
+    window.startKakaoNavi = startKakaoNavi;
   </script>
 </body>
 </html>
