--- a/public/find_pw.html
+++ b/public/find_pw.html
@@ -1,1 +1,19 @@
+<!-- public/find_pw.html -->
+<!DOCTYPE html><html lang="ko"><head>
+<meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>비밀번호 찾기</title>
+<style>body{font-family:"Noto Sans KR",sans-serif;background:#f7f9fc;margin:0}
+.wrap{max-width:420px;margin:40px auto;background:#fff;padding:18px;border-radius:16px;box-shadow:0 10px 30px rgba(0,0,0,.06)}
+label{display:block;font-weight:700;margin:8px 0 6px}input{width:100%;padding:12px;border:1px solid #e5e7eb;border-radius:10px}
+.btn{width:100%;margin-top:12px;background:#007bff;color:#fff;border:none;padding:12px;border-radius:10px;font-weight:700;cursor:pointer}
+a{display:block;text-align:center;margin-top:10px;color:#007bff;text-decoration:none;font-weight:700}
+</style></head><body>
+<div class="wrap">
+  <h2>비밀번호 찾기</h2>
+  <label>아이디</label><input type="text" placeholder="아이디">
+  <label>전화번호</label><input type="text" placeholder="010-0000-0000">
+  <button class="btn" onclick="alert('임시 비밀번호를 발급했습니다: Pass!234')">임시 비밀번호 발급</button>
+  <a href="index.html">로그인으로 돌아가기</a>
+</div>
+</body></html>
 
