--- a/public/stats.html
+++ b/public/stats.html
@@ -1,1 +1,57 @@
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+<meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>실적 조회 - The Listen</title>
+<style>
+  body{margin:0;background:#f7f9fc;font-family:"Noto Sans KR",sans-serif}
+  header{background:#007bff;color:#fff;text-align:center;padding:12px;font-weight:700}
+  .wrap{max-width:820px;margin:16px auto;padding:12px}
+  .card{background:#fff;border-radius:16px;box-shadow:0 10px 26px rgba(0,0,0,.06);padding:14px;margin-bottom:10px}
+  label{font-weight:700;margin-right:8px}
+  table{width:100%;border-collapse:collapse;margin-top:10px}
+  th,td{border-bottom:1px solid #eee;padding:8px;text-align:left}
+</style>
+</head>
+<body>
+<header>실적 조회</header>
+<div class="wrap">
+  <div class="card">
+    <div>
+      <label>일별 조회</label>
+      <input id="day" type="date" />
+      <button onclick="loadDay()">조회</button>
+    </div>
+    <div id="dayResult" style="margin-top:10px;"></div>
+  </div>
+  <div class="card">
+    <div>
+      <label>월별 조회</label>
+      <input id="month" type="month" />
+      <button onclick="loadMonth()">조회</button>
+    </div>
+    <div id="monthResult" style="margin-top:10px;"></div>
+  </div>
+</div>
+<script>
+const data = JSON.parse(localStorage.getItem('completed')||'[]');
+function loadDay(){
+  const d=document.getElementById('day').value; if(!d) return;
+  const rows=data.filter(x=>x.date===d);
+  document.getElementById('dayResult').innerHTML = rows.length===0 ? '해당일 완료 없음' :
+    `<table><thead><tr><th>운송장</th><th>주소</th><th>일자</th></tr></thead><tbody>${
+      rows.map(r=>`<tr><td>${r.id}</td><td>${r.address}</td><td>${r.date}</td></tr>`).join('')
+    }</tbody></table>`;
+}
+function loadMonth(){
+  const m=document.getElementById('month').value; if(!m) return;
+  const rows=data.filter(x=>x.date && x.date.startsWith(m));
+  const pay = rows.length * 1000; // 데모: 월료 1건 1000원 가정
+  document.getElementById('monthResult').innerHTML = `
+    <div><b>${m}</b> 총 완료: <b>${rows.length}</b>건 · 예상 월료: <b>${pay.toLocaleString()}</b>원</div>
+  `;
+}
+</script>
+</body>
+</html>
 
