--- a/public/howto.html
+++ b/public/howto.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+<meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>앱 사용 방법 - The Listen</title>
+<style>
+  body{margin:0;background:#f7f9fc;font-family:"Noto Sans KR",sans-serif}
+  header{background:#007bff;color:#fff;text-align:center;padding:12px;font-weight:700}
+  .wrap{max-width:820px;margin:16px auto;background:#fff;border-radius:16px;box-shadow:0 10px 26px rgba(0,0,0,.06);padding:16px}
+  h2{margin:10px 0}
+  li{margin:6px 0}
+</style>
+</head>
+<body>
+<header>앱 사용 방법 · 회사 안내</header>
+<div class="wrap">
+  <h2>사용 방법</h2>
+  <ol>
+    <li>로그인 후 대시보드에서 <b>현재 지도보기</b>를 선택합니다.</li>
+    <li>지도에서 순번 마커를 누르면 <b>고객 카드</b>가 열립니다.</li>
+    <li><b>카카오네비</b>로 길안내를 시작하거나 <b>사진 촬영·전송</b>으로 배송완료 처리합니다.</li>
+    <li>대시보드의 <b>배송완료</b>에서 당일 완료 건을 확인합니다.</li>
+    <li><b>실적 조회</b>에서 일/월 기준으로 성과를 확인합니다.</li>
+  </ol>
+  <h2>회사 안내</h2>
+  <p>The Listen · AI·GPS 기반 라스트마일 배송 플랫폼</p>
+</div>
+</body>
+</html>
